@@ -1,0 +1,27 @@
+[Totem Plugin]
+Loader=python
+Module=dbus-service
+IAge=1
+_Name=D-Bus Service
+_Description=Plugin for sending notifications of currently-playing movies to the D-Bus subsystem.
+Authors=Lucky <lucky1.data@gmail.com>
+Copyright=Copyright © 2009 Lucky
+Website=http://projects.gnome.org/totem/
+[Totem Plugin]
+Loader=python
+Module=dbus-service
+IAge=1
+_Name=D-Bus Service
+_Description=Plugin for sending notifications of currently-playing movies to the D-Bus subsystem.
+Authors=Lucky <lucky1.data@gmail.com>
+Copyright=Copyright © 2009 Lucky
+Website=http://projects.gnome.org/totem/
+[Totem Plugin]
+Loader=python
+Module=dbus-service
+IAge=1
+_Name=D-Bus Service
+_Description=Plugin for sending notifications of currently-playing movies to the D-Bus subsystem.
+Authors=Lucky <lucky1.data@gmail.com>
+Copyright=Copyright © 2009 Lucky
+Website=http://projects.gnome.org/totem/
