@@ -1,3 +1,7 @@
+2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* C/totem.xml: Added documentation for the new D-Bus Service plugin.
+
 2009-03-31  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* C/totem.xml:
