@@ -1,5 +1,9 @@
 2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>
 
+	* POTFILES.in:
+
+2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>
+
 	* POTFILES.in: Ported the YouTube plugin to C.
 
 2009-03-31 Og Maciel <ogmaciel@gnome.org>
