@@ -1,5 +1,14 @@
 2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>
 
+	* configure.in:
+	* src/plugins/dbus-service/Makefile.am:
+	* src/plugins/dbus-service/dbus-service.py:
+	* src/plugins/dbus-service/dbus-service.totem-plugin.in: Added a
+	D-Bus Service plugin by Lucky <lucky1.data@gmail.com>.
+	(Closes: #576016)
+
+2009-04-01  Philip Withnall  <philip@tecnocode.co.uk>
+
 	* src/plugins/youtube/totem-youtube.c (new_from_stream_thread),
 	(totem_gdk_pixbuf_new_from_stream_at_scale_async),
 	(totem_gdk_pixbuf_new_from_stream_async),
